<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="coffee.prototype.android.cleandrinksapplication.Sign_Up_Activity">

    <include
        android:id="@+id/email_address_card"
        layout="@layout/toolbargeneric" />

    <android.support.v7.widget.CardView
        android:id="@+id/sign_up_heading_card"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@color/com_smart_login_code"
        app:cardUseCompatPadding="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">



        <ImageView
            android:id="@+id/sign_up_image_heading"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/sign_up_icon_content_description"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/sign_up_user" />


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/sign_up_card_banner"
        android:layout_width="400dp"
        android:layout_height="320dp"
        android:layout_marginTop="-8dp"
        android:layout_below="@+id/sign_up_heading_card"
        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <TextView
            android:id="@+id/sign_up_heading"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/sign_up_heading"
            android:textSize="30sp"

            />


        <EditText
            android:id="@+id/email_address_sign_up_field"
            style="@style/Heading_font"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"


            />


        <EditText
            android:id="@+id/password_address_sign_up_field"
            style="@style/Heading_font"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"


            />


        <View
            android:id="@+id/divider_below_sign_up_heading"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightGrey">

        </View>


        <View
            android:id="@+id/divider_bottom_of_card"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="240dp"
            android:background="@color/lightGrey">

        </View>




        <TextView
            android:id="@+id/passwordstrength"
            android:layout_width="305dp"
            android:layout_height="40dp"
            android:layout_marginTop="180dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            style="@style/receipt_child_values"
            />

        <Button
            android:id="@+id/sign_activity_button_signupactivity"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:onClick="openWeightActivityAfterCorrectSignUp"
            android:contentDescription="sign_up_button_desc"
            android:text="@string/login_sign_up_button_text" />
    </android.support.v7.widget.CardView>


</RelativeLayout>
