...
            android:text="@string/weight_height_activity_heading"
            android:textSize="25sp"

            />

        <TextView
            android:id="@+id/weight_paragraph_text"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="90dp"
...
