...

    <string name="sign_up_heading">Sign up</string>

    <string name="sign_up_icon_content_description">Icon of a user with a plus symbol next to them.</string>


    <string name="alcohol_category_name">Alcohol</string>
    <string name="caffeine_category_name">Caffeine</string>
    <string name="accessibility_label_for_caffeine_image">Images of different machines for brewing coffee</string>
    <string name="accessibility_label_for_alcohol_image">Images of different bottles of alcohol</string>
    <string name="button_plus_symbol">+</string>
    <string name="button_minus_symbol">-</string>

...

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="weight_height_activity_heading">A bit about you.</string>

    <string name="weight_height_activity_sub_heading">Please enter weight and height.</string>

    <string name="weight_height_weight_hint_text">"E.g 25"</string>

    <string name="weight_height_weight_unit">KG"</string>


...

    <string name="black_coffee_title">Black Coffee Based Drinks</string>
    <string name="black_coffee_title_content_cat">Espresso cup</string>
    <string name="black_coffee_title_content_desc">Black coffee pot  for black coffee listing button</string>

    <string name="ghost_image_forgot_password">Ghost image</string>
    <string name="forgot_password_title">Forgotten Password</string>
    <string name="email_address_hint">Forgotten Password</string>
    <string name="update_password">Update password</string>
    <string name="update_password_button">Update password Button</string>
    <string name="remember_password">Remember password?</string>
    <string name="back_to_login_password">Back to login </string>
    <string name="back_to_login__password_button">Back to login  Button</string>
...
