<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.v7.widget.CardView
        android:id="@+id/email_address_card"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        >

        <EditText
            android:id="@+id/email_address_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            style="@style/Heading_font"


            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/password_card"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="95dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        >

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            style="@style/Heading_font"

            />
    </android.support.v7.widget.CardView>


</RelativeLayout>