...
        android:background="?android:attr/selectableItemBackground"

        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@color/darkBlue">

        <TextView
            android:id="@+id/alcohol_heading"
            style="@style/Heading_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/alcohol_text"
            android:textColor="@color/white" />
...
