...
        android:layout_below="@+id/sign_up_heading_card"
        android:foregroundGravity="center_horizontal"
        card_view:cardBackgroundColor="@color/white">


        <TextView
            android:id="@+id/forgotten_password_heading"
            style="@style/receipt_child_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
...
